# TinyToyCompiler

./: .gitignore  CMakeLists.txt  Makefile  Node.h  README.md  build.sh  codegen.cpp  codegen.h  compiler  lexer.cpp  lexer.l  libtoyc.cpp  libtoyc.h  main.cpp  parser.cpp  parser.hpp  parser.y  testinput.txt
docs/development/: AST.md  Lexer.md  Syntax.md  main.md
test/: power.txt  testinput.txt
